@@ -1,5 +1,6 @@
 User-visible changes in version 0.9.7  (2011-  -  ):
 * fix: UDFs (user-defined functions) did not work properly in ver. 0.9.5-6
+* data operations: added aggregate functions argmin, argmax and count
 
 User-visible changes in version 0.9.6  (2011-01-26):
 * fixed three bugs, one of them was sometimes crashing the program at startup
